milestone4/tests/test_5.java
public class test_5 {
    
    public static int add(int a, int b) {
        return a + b;
    }

    public static void main() {
        System.out.println(add(1, 2, 3));
    }
}
//error